# niondata

./: .travis.yml  CHANGES.rst  meta.yaml  mypy.ini  pyproject.toml  setup.cfg  setup.py  test-requirements.txt
.github/workflows/: python-package.yml
nion/data/: AnnotatedArray.py  Calibration.py  Context.py  Core.py  DataAndMetadata.py  Image.py  Mask.py  MultiDimensionalProcessing.py  RGB.py  ReferenceFrame.py  Shape.py  TemplateMatching.py  xdata_1_0.py
nion/data/test/: Core_test.py  ExtendedData_test.py  Image_test.py  MultiDimensionalProcessing_test.py  xdata_test.py
